Restyled account dropdown in navigation bar and added picture thumbnail.

--- a/theme/static/css/hydroshare_core.css
+++ b/theme/static/css/hydroshare_core.css
@@ -684,6 +684,10 @@ li.account p{
 #cogs-menu,
 #profile-menu {
 	display: none;
+	text-transform: initial;
+}
+#profile-menu > .dropdown-toggle {
+	font-size: 14px;
 }
 .display-none {
 	display: none !important;
