--- a/hs_core/templates/pages/genericresource.html
+++ b/hs_core/templates/pages/genericresource.html
@@ -145,6 +145,7 @@
                     <tr>
                         <th>Authors:</th>
                         <td><span id="authors">
+
                                 {% for author in creator_formset.initial %}
                                     {% if forloop.counter0 != 0 %} <span class="list-separator">·</span> {% endif %}
                                     {% if author.description %}
@@ -2241,7 +2242,7 @@
             </div>
         </div>
 
-        <div class="modal fade in" id="add-contributor-dialog" tabindex="-1" 'role="dialog"
+        <div class="modal fade in" id="add-contributor-dialog" tabindex="-1" role="dialog"
              aria-labelledby="myModalLabel" aria-hidden="true">
             <div class="modal-dialog">
                 <div class="modal-content">
