--- a/hs_core/templates/pages/genericresource.html
+++ b/hs_core/templates/pages/genericresource.html
@@ -968,7 +968,7 @@
                             <li class="col-xs-2 col-md-2">
                                 <a href="#relevantTools" data-toggle="tab">
                                     <span class="glyphicon glyphicon-wrench"></span>
-                                    &nbsp;Relevant Web Apps
+                                    &nbsp; Web Apps
                                 </a>
                             </li>
                         {% endif %}
@@ -1561,8 +1561,7 @@
                             <!-- ========= RELEVANT TOOLS TAB ========= -->
                         {% if relevant_tools %}
                             <div class="tab-pane" id="relevantTools">
-                            {% if not metadata_form %}ls
-
+                            {% if not metadata_form %}
                                 {% for tool in relevant_tools %}
                                     <h4>{{ tool.title }}</h4>
                                     <a href="{{ tool.url }}" target="_blank"><button class="btn btn-primary">Launch Tool</button></a>
