--- a/hs_core/templates/pages/my-resources.html
+++ b/hs_core/templates/pages/my-resources.html
@@ -331,7 +331,7 @@
                 $li = this.$items.find('li');
                 var width = 3;
                 $li.each(function(){ width += $(this).outerWidth()+5; });
-                //this.$input.css('padding-left', width+"px");
+                this.$input.css('padding-left', width+"px");
             },
         });
 
