--- a/hs_core/templates/404.html
+++ b/hs_core/templates/404.html
@@ -95,9 +95,11 @@
                         <ul class="dropdown-menu">
                             <li class="account">
                                 {% if request.user.userprofile.picture and request.user.userprofile.picture.url%}
-                                <div style="background-image: url('{{ request.user.userprofile.picture.url }}'); float:left;"
-                                     class="round-image profile-pic-thumbnail">
+                                <div style="background-image: url('{{ request.user.userprofile.picture.url }}');"
+                                     class="round-image profile-pic-thumbnail pull-left">
                                 </div>
+                                {% else %}
+                                    <div class="profile-pic-thumbnail round-image user-icon pull-left"></div>
                                 {% endif %}
                                 <span>
                                     <strong>{{ request.user }}</strong>
