--- a/hs_app_netCDF/templates/pages/netcdfresource.html
+++ b/hs_app_netCDF/templates/pages/netcdfresource.html
@@ -184,7 +184,7 @@
         {% for f in cm.files.all %}
             {% if f.resource_file.name|slice:"-3:" == '.nc'%}
                 <td><a style="margin-left:15px" id="btn-netcdf-opendap" type="button" class="btn btn-success" href='{{opendap_link }}'
-                       title='When changing this resource to or from public or private,please allow 2 minutes for the OPeNDAP service to refresh on this page' >
+                       title="When changing this resource's sharing status, please allow 2 minutes for the OPeNDAP service to refresh on this page" >
                     <span class="button-label"> OPeNDAP Service</span>
                 </a></td>
             {% endif %}
@@ -232,8 +232,11 @@
 
     // netcdf opendap button
     $(document).ready(function(){
-        $("#btn-netcdf-opendap").insertAfter("#btn-download-all");
+        if ($('#btn-netcdf-opendap').length > 0){
+           $("#btn-netcdf-opendap").insertAfter("#btn-download-all");
+        }
     })
+
 
 </script>
 
