--- a/hs_swat_modelinstance/templates/pages/swatmodelinstanceresource.html
+++ b/hs_swat_modelinstance/templates/pages/swatmodelinstanceresource.html
@@ -216,9 +216,16 @@
 {%  endblock %}
 
 {% load staticfiles  %}
+
+{% block extra_css %}
+    <link rel="stylesheet" type="text/css" href="{% static "css/bootstrap-multiselect.css" %}" />
+    <link rel="stylesheet" type="text/css" href="{% static "css/model_instance.css" %}" />
+{% endblock %}
+
 {% block extra_js %}
     {{ block.super }}
 
     {# resource specific js can go here #}
+    <script src="{% static "js/bootstrap-multiselect.js"%}"></script>
     <script src="{% static "js/model_instance.js"%}"></script>
 {%  endblock %}
