--- a/hs_core/templates/pages/genericresource.html
+++ b/hs_core/templates/pages/genericresource.html
@@ -2644,7 +2644,8 @@
                         json_response = JSON.parse(result);
                         if (json_response.status === 'success')
                         {
-                            $form.find("button").hide();
+                            $(document).trigger(jQuery.Event("submit-success"));
+                            $form.find("button.btn-primary").hide();
                             if (json_response.hasOwnProperty('element_id')){
                                 form_update_action = $form.attr('action');
                                 res_short_id = form_update_action.split('/')[3];
@@ -2674,15 +2675,19 @@
                                 this.remove();
                             });
                             $(".alert-success").fadeTo(2000, 500).fadeOut(1000, function(){
+                                $(document).trigger(jQuery.Event("submit-error"));
                                 $(".alert-success").alert('close');
                             });
                         }
                         else{
                             $('body > .container').append($alert_error);
                             $(".alert-danger").fadeTo(3000, 500).fadeOut(1000, function(){
+                                $(document).trigger(jQuery.Event("submit-error"));
                                 $(".alert-danger").alert('close');
                             });
                         }
+
+                        console.log('here2');
                     },
                     error: function(XMLHttpRequest, textStatus, errorThrown)
                     {
