--- a/theme/templates/accounts/profile.html
+++ b/theme/templates/accounts/profile.html
@@ -108,7 +108,7 @@
                                             {% endif %}
 
                                             <span class="text-muted"> shared </span>
-                                            <span><a href="{{ res.get_absolute_url }}">{{ res.title }}</a></span>
+                                            <span><a href="{{ res.get_absolute_url }}">{{ res.metadata.title }}</a></span>
                                             <h5 style="margin:0 50px;" class="text-muted">Resource type: <strong>{{ res|resource_type }}</strong></h5>
                                             <h5 style="margin:0 50px;margin-bottom:15px;" class="text-muted">Date: <strong>{{ res.created }}</strong></h5>
 
@@ -321,7 +321,7 @@
                                     </div>
                                     <div class="activity-block row">
                                         <div class="activity-info col-sm-12">
-                                            <span style="font-size:16px;"><a href="{{ res.get_absolute_url }}">{{ res.title }}</a></span>
+                                            <span style="font-size:16px;"><a href="{{ res.get_absolute_url }}">{{ res.metadata.title }}</a></span>
                                             <h5 style="margin:0" class="text-muted">Created: <strong>{{ res.created }}</strong></h5>
                                             <h5 style="margin:0" class="text-muted">Authors:<strong>
                                                 {% for creator in res.metadata.creators.all %}
@@ -463,14 +463,16 @@
 {% block extra_js %}
     <script type="text/javascript">
     $(document).ready(function () {
+        // Abstract collapse toggle
         $(".show-more-btn").click(function () {
             if ($(this).parent().find(".activity-description").css("max-height") == "50px") {
                 var block = $(this).parent().find(".activity-description");
 
-                block.css("max-height", "initial");
-                var autoHeight = block.height();
-                block.css("max-height", "50px");
-                block.animate({'max-height': autoHeight}, 300);
+                block.css("max-height", "initial"); // Set max-height to initial temporarily.
+                var maxHeight = block.height();    // Save the max height
+                block.css("max-height", "50px");    // Restore
+
+                block.animate({'max-height': maxHeight}, 300); // Animate to max height
                 $(this).text("▲");
                 $(this).attr("title", "Show less");
             }
@@ -481,8 +483,21 @@
             }
         });
 
-        // ------------ Initialize filters ---------------------------------------
+        // Filter list listener
+        $(".table-user-contributions tbody > tr").click(function(){
+            $(".table-user-contributions tbody > tr").removeClass("active");
+            $(this).addClass("active");
+            var res_type = $(this).attr("data-type");
+            if (res_type == "all") {
+                $(".contribution").fadeIn();
+            }
+            else {
+                $(".contribution").hide();
+                $(".contribution[data-type='" + res_type + "']").fadeIn();
+            }
+        });
 
+        // Initialize filters
         var collection = [];
         collection["total"] = 0;
 
@@ -500,20 +515,8 @@
         for (var item in collection) {
             $("tr[data-type='" + item + "']").find(".badge").text(collection[item]);
         }
-        $("tr[data-type='all']").find(".badge").text(collection["total"]);
 
-        $(".table-user-contributions tbody > tr").click(function(){
-            $(".table-user-contributions tbody > tr").removeClass("active");
-            $(this).addClass("active");
-            var res_type = $(this).attr("data-type");
-            if (res_type == "all") {
-                $(".contribution").fadeIn();
-            }
-            else {
-                $(".contribution").hide();
-                $(".contribution[data-type='" + res_type + "']").fadeIn();
-            }
-        });
+        $("tr[data-type='all']").find(".badge").text(collection["total"]);
 
     });
     </script>
