--- a/hs_core/templates/pages/genericresource.html
+++ b/hs_core/templates/pages/genericresource.html
@@ -1564,7 +1564,7 @@
                             {% if not metadata_form %}
                                 {% for tool in relevant_tools %}
                                     <h4>{{ tool.title }}</h4>
-                                    <a href="{{ tool.url }}" target="_blank"><button class="btn btn-primary">Launch Tool</button></a>
+                                    <a href="{{ tool.url }}" target="_blank"><button class="btn btn-primary">Launch App</button></a>
                                     <hr>
                                 {% endfor %}
                             {% else %}
