--- a/hs_tools_resource/templates/pages/toolresource.html
+++ b/hs_tools_resource/templates/pages/toolresource.html
@@ -11,80 +11,46 @@
 {% block extended_metadata %}
     {% if extended_metadata_exists %}
         <div class="row">
-            <div class="col-md-12">
-                <div>
-                    {% if url_base %}
-                        <h4><strong>URL Base:</strong></h4>
-                        <hr style="margin-top: 0px;margin-bottom: 2px">
+        <div class="col-md-12">
+            <div>
+                {% if url_base %}
+                    <h4><strong>URL Base:</strong></h4>
+                    <hr style="margin-top: 0px;margin-bottom: 2px">
+                    <div class="row">
+                        <div class="col-sm-4"><strong>App URL:</strong></div>
+                        <div class="col-sm-8"><a href='{{ url_base.value }}'>{{ url_base.value }}</a></div>
+                    </div>
+                <hr style="border:0">
+                {%  endif %}
+            </div>
+            <div>
+                {% if version %}
+                    <h4><strong>Version:</strong></h4>
+                    <hr style="margin-top: 0px;margin-bottom: 2px">
                         <div class="row">
-                            <div class="col-sm-4"><strong>URL Base:</strong></div>
-                            <div class="col-sm-8"><a href='{{ url_base.value }}'>{{ url_base.value }}</a></div>
+                            <div class="col-sm-4"><strong>Version:</strong></div>
+                            <div class="col-sm-8">{{ version.value }}</div>
                         </div>
-                    <hr style="border:0">
-                    {%  endif %}
-                </div>
-                <div>
-                    {% if res_types %}
-                        <h4><strong>Relevant Resource Types:</strong></h4>
-                        <hr style="margin-top: 0px;margin-bottom: 2px">
-                        <div class="row">
-                            <div class="col-sm-4"><strong>Resource Types:</strong></div>
-                            {% for type in res_types %}
-                                <div class="col-sm-8">{{ type.tool_res_type }}</div>
-                            {% endfor %}
-                        </div>
-                    {% endif %}
-                    <hr style="border:0">
-                </div>
-{#                <div>#}
-{#                    {% if fees %}#}
-{#                        <h4><strong>Fees:</strong></h4>#}
-{#                        <hr style="margin-top: 0px;margin-bottom: 2px">#}
-{#                        {% for fee in fees %}#}
-{#                            <div class="row">#}
-{#                                <div class="col-sm-4"><strong>Description</strong></div>#}
-{#                                <div class="col-sm-8">{{ fee.description }}</div>#}
-{#                            </div>#}
-{#                            <div class="row">#}
-{#                                <div class="col-sm-4"><strong>Amount</strong></div>#}
-{#                                <div class="col-sm-8">{{ fee.value }}</div>#}
-{#                            </div>#}
-{#                        {% endfor %}#}
-{#                    <hr style="border:0">#}
-{#                    {% endif %}#}
-{#                </div>#}
-                <div>
-                    {% if version %}
-                        <h4><strong>Version:</strong></h4>
-                        <hr style="margin-top: 0px;margin-bottom: 2px">
-                            <div class="row">
-                                <div class="col-sm-4"><strong>Version:</strong></div>
-                                <div class="col-sm-8">{{ version.value }}</div>
-                            </div>
-                    {% endif %}
-                </div>
-
+                {% endif %}
+            </div>
              <div>
-                    {% if supported_res_types %}
-                        <h4><strong>Supported Resource Types:</strong></h4>
-                        <hr style="margin-top: 0px;margin-bottom: 2px">
-                            <div class="row">
-                                <div class="col-sm-8">{{ supported_res_types}}</div>
-                            </div>
-                    {% endif %}
+                {% if supported_res_types %}
+                    <h4><strong>Supported Resource Types:</strong></h4>
+                    <hr style="margin-top: 0px;margin-bottom: 2px">
+                        <div class="row">
+                            <div class="col-sm-8">{{ supported_res_types }}</div>
+                        </div>
+                {% endif %}
                 </div>
             </div>
         </div>
     {%  endif %}
 {%  endblock %}
 
-
-
-
 {% block extra_js %}
 
 {{ block.super }}
-    <div id="checked_res_div" hidden="true">{{  checked_res }}</div>
+    <div id="checked_res_div" hidden="true">{{ checked_res }}</div>
 
 {# put resource specific js below #}
 <script type="text/javascript">
@@ -100,5 +66,4 @@
         }
     })
 </script>
-
 {% endblock %}
