--- a/hs_core/templates/search/search.html
+++ b/hs_core/templates/search/search.html
@@ -20,16 +20,27 @@
 			</form>
 			
             {% for key, value in facets.fields.items %}
-                <h4> Faceted By {{ key }}</h4>
-                <ul class="list-group">
-                {% for item in value %}
-                        <li class="list-group-item">
-                            <span class="label label-default label-pill pull-right">({{ item.1 }})</span>
-                            <a href="{{ request.get_full_path }}&amp;selected_facets={{ key }}_exact:{{ item.0|urlencode }}">{{ item.0 }}</a>
-                        </li>
-                {% endfor %}
-                </ul>
+                <div class="panel-group">
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                        <h4 class="panel-title">
+                            <a data-toggle="collapse" href="#{{ key }}">Filter By {{ key }}</a>
+                        </h4>
+                        </div>
+                        <div id="{{ key }}" class="panel-collapse collapse in">
+                            <ul class="list-group">
+                            {% for item in value %}
+                                <li class="list-group-item">
+                                    <span class="label label-default label-pill pull-right">({{ item.1 }})</span>
+                                    <a href="{{ request.get_full_path }}&amp;selected_facets={{ key }}_exact:{{ item.0|urlencode }}">{{ item.0 }}</a>
+                                </li>
+                            {% endfor %}
+                            </ul>
+                        </div>
+                    </div>
+                </div>
             {% endfor %}
+
         </div>
        	<div class="col-lg-9" id="items">
        		<table class="table table-striped table-hover" id="item-selectors">
