--- a/hs_core/templates/search/search.html
+++ b/hs_core/templates/search/search.html
@@ -7,18 +7,17 @@
 <div class="container-fluid" id="main">
     <div class="row">
         <div class="col-lg-3" id="folders">
-        	<form method="get" action=".">
-    			<table>
-        			<tbody>
-            			{{ form.as_table }}
-            			<tr>
-                			<td>&nbsp;</td>
-                			<td><input type="submit" value="Search"></td>
-            			</tr>
-        			</tbody>
-    			</table>
-			</form>
-			
+             <form method="get" action=".">
+                <table>
+                    <tbody>
+                        {{ form.as_table }}
+                        <tr>
+                            <td>&nbsp;</td>
+                            <td><input type="submit" value="Search"></td>
+                        </tr>
+                    </tbody>
+                </table>
+            </form>
             {% for key, value in facets.fields.items %}
                 <div class="panel-group">
                     <div class="panel panel-default">
@@ -31,8 +30,18 @@
                             <ul class="list-group">
                             {% for item in value %}
                                 <li class="list-group-item">
-                                    <span class="label label-default label-pill pull-right">({{ item.1 }})</span>
-                                    <a href="{{ request.get_full_path }}&amp;selected_facets={{ key }}_exact:{{ item.0|urlencode }}">{{ item.0 }}</a>
+                                    <input id="{{ item.0 }}" type="checkbox" onchange='window.location.assign("{{ request.get_full_path }}&amp;selected_facets={{ key }}_exact:{{ item.0|urlencode }}")' class="pull-left"> {{ item.0 }} &nbsp;&nbsp;
+                                    <span class="label label-default label-pill pull-right"
+                                            {% if item.1 < 5 %}
+                                                style="background-color:#3333FF" class="badge"
+                                            {% elif item.1 >= 5 and item.1 < 10 %}
+                                                style="background-color:#CCFF00" class="badge"
+                                            {% elif item.1 >= 10 %}
+                                                style="background-color:#FF0000" class="badge"
+                                            {% endif %}>{{ item.1 }}
+                                    </span>
+
+                                    {#<a href="{{ request.get_full_path }}&amp;selected_facets={{ key }}_exact:{{ item.0|urlencode }}">{{ item.0 }}</a>#}
                                 </li>
                             {% endfor %}
                             </ul>
@@ -42,22 +51,24 @@
             {% endfor %}
 
         </div>
-       	<div class="col-lg-9" id="items">
-       		<table class="table table-striped table-hover" id="item-selectors">
+        <div class="col-lg-9" id="items">
+            <table class="table table-striped table-hover" id="item-selectors">
+                <tr>
+                </tr>
                 <tr>
                     <th>Title</th>
                 </tr>
                 {% if query %}
-                	{% for result in page.object_list %}
-                    	<tr>
-                        	<td><a href="{{ result.object.get_absolute_url }}">{{ result.object.title }}</a></td>
-                    	</tr>
+                    {% for result in page.object_list %}
+                        <tr>
+                            <td><a href="{{ result.object.get_absolute_url }}">{{ result.object.title }}</a></td>
+                        </tr>
                     {% empty %}
-        			<p>Sorry, no results found.</p>
-                	{% endfor %}
-    			{% endif %}
-        	</table>
-       	</div>
+                    <p>Sorry, no results found.</p>
+                    {% endfor %}
+                {% endif %}
+            </table>
+        </div>
     </div>
 </div>
 {% endblock %}
