[#734] Layout change for Model Instance resource specific tab

--- a/theme/static/css/hydroshare_core.css
+++ b/theme/static/css/hydroshare_core.css
@@ -975,6 +975,10 @@ span.remove{
 	overflow: auto;
 }
 
+#modeloutput input.form-control[type='radio'] {
+	box-shadow: none;
+
+}
 .custom-table th {
 	padding-right: 8px;
 }
